--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -42,10 +42,12 @@ display: inline; z-index: 1000; float: left; position: absolute; width: 204px; c
 .task ol { margin: 0px 0px 9px 40px; }
 .task blockquote { margin: 30px 15px 30px 15px; }
 .task blockquote p { line-height: 1.3em; font-size: 19px; }
-.task .correct { color: green; font-weight: bold; }
 .task .answer label { font-size: 17px; margin-top: 10px; }
 .task-comments {   background-color:#f5f5f5; display:block; padding:8.5px; margin:0 0 18px; line-height:18px; font-size:12px; border:1px solid #ccc; border:1px solid rgba(0, 0, 0, 0.15); -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px; white-space:pre; white-space:pre-wrap; word-wrap:break-word; }
 #suggest_icon { vertical-align: middle; margin-bottom: 5px; padding: 2px; border: 1px solid #CCC; -webkit-border-radius: 4px; border-radius: 4px; -moz-border-radius: 4px; }
+.task .answer { color: #404040; padding: 10px 0px; font-size: 18px; }
+.task .correct { color: green; font-weight: bold; }
+.task .user_answer { background-color: whitesmoke; }
 
 /* Header */
 .top_nav_bar { font-size: 15px; padding-top:4px; }
