Finished voting system.

--- a/app/views/paths/finish.html.erb
+++ b/app/views/paths/finish.html.erb
@@ -20,15 +20,17 @@ $(function(){
       if(data.errors){
         alert(data.errors);
       } else {
-        var $vote_counter = $(this).parents("li:first").children("div:last").children(".vote_count")
+        console.log($(this).parents("li:first").children("div:last"));
+        var $vote_counter = $(this).parents("li:first").children("div.vote_count");
+        console.log($vote_counter);
         var votes = parseInt($vote_counter.text());
         console.log(votes);
         if($(this).hasClass("primary")){
           $(this).removeClass("primary").addClass("secondary").text("Vote");
-          $vote_counter.text(votes-1);
+          $vote_counter.html("<span class='label notice' style='font-size: 16px;'>+"+(votes-1)+"</span>");
         } else if($(this).hasClass("secondary")){
           $(this).removeClass("secondary").addClass("primary").text("Voted");
-          $vote_counter.text(votes+1);
+          $vote_counter.html("<span class='label notice' style='font-size: 16px;'>+"+(votes+1)+"</span>");
         }
       }
     }
@@ -130,8 +132,11 @@ $(function(){
                 <% else %>
                   <% raise "Invalid answer sub type." %>
                 <% end %>
-                  <div style="line-height: 16px; font-size:18px; font-weight: bold; float:left;">
-                    Votes: <div class="vote_count" style="display:inline;"><%= sa.total_votes %></div>
+                  <div>
+                    <span class="" style="font-size: 12px;">Posted <%= time_ago_in_words(sa.created_at) %> ago</span>
+                  </div>
+                  <div class="vote_count" style="margin-top:10px;">
+                    <span class="label notice" style="font-size: 16px;">+<%= sa.total_votes %></span>
                   </div>
                 </li>
               <% end %>
