Answers done, completed task still driving

--- a/app/views/tasks/_new_task_form.html.erb
+++ b/app/views/tasks/_new_task_form.html.erb
@@ -91,7 +91,7 @@ $(function(){
         <div class="fib hide">
           <div class="field clearfix">
             <div class="input">
-              <%= text_area_tag("task[fib_answer]", nil, :style=>"width:300px;", :placeholder => "List answers here...") %>
+              <%= text_area_tag("task[fibanswer1]", nil, :style=>"width:300px;", :placeholder => "List answers here...") %>
               <p style="font-style: italic; width:300px;">Provide a list of all possible correct answers (case-insensitve) seperated by <strong>commas</strong>.</p>
             </div>
           </div>
