--- a/app/views/sections/_multiple_choice_answer.html.erb
+++ b/app/views/sections/_multiple_choice_answer.html.erb
@@ -14,33 +14,15 @@ label.unselected_answer { border: 2px solid white; background: white;}
 
 <div class="field clearfix">
   <div class="input">
-    <ul class="inputs-list">
+    <ul class="inputs-list">  
+    <% @answers.each do |a| %>
       <li>
-        <% unless task.answer1.blank? %>
-        <label class="<%= @hints.include?(task.answer1) ? "incorrect_answer" : "possible_answer" %> unselected_answer" onclick="<%= selection_script unless @hints.include?(task.answer1) %>">
-          <input <%= @hints.include?(task.answer1) ? "disabled='disabled'" : "" %> id="completed_task_answer1" name="answer" type="radio" value="1">
-          <span class="<%= @hints.include?(task.answer1) ? "already_guessed" : "" %>"><%= task.answer1 %></span>
-        </label>
-        <% end %>
-        <% unless task.answer2.blank? %>
-        <label class="<%= @hints.include?(task.answer2) ? "incorrect_answer" : "possible_answer" %> unselected_answer" onclick="<%= selection_script unless @hints.include?(task.answer2) %>">
-          <input <%= @hints.include?(task.answer2) ? "disabled='disabled'" : "" %> id="completed_task_answer2" name="answer" type="radio" value="2">
-          <span class="<%= @hints.include?(task.answer2) ? "already_guessed" : "" %>"><%= task.answer2 %></span>
-        </label>
-        <% end %>
-        <% unless task.answer3.blank? %>
-        <label class="<%= @hints.include?(task.answer3) ? "incorrect_answer" : "possible_answer" %> unselected_answer" onclick="<%= selection_script unless @hints.include?(task.answer3) %>">
-          <input <%= @hints.include?(task.answer3) ? "disabled='disabled'" : "" %> id="completed_task_answer3" name="answer" type="radio" value="3">
-          <span class="<%= @hints.include?(task.answer3) ? "already_guessed" : "" %>"><%= task.answer3 %></span>
-        </label>
-        <% end %>
-        <% unless task.answer4.blank? %>
-        <label class="<%= @hints.include?(task.answer4) ? "incorrect_answer" : "possible_answer" %> unselected_answer" onclick="<%= selection_script unless @hints.include?(task.answer4) %>">
-          <input <%= @hints.include?(task.answer4) ? "disabled='disabled'" : "" %> id="completed_task_answer4" name="answer" type="radio" value="4">
-          <span class="<%= @hints.include?(task.answer4) ? "already_guessed" : "" %>"><%= task.answer4 %></span>
-        </label>
-        <% end %>
+      <label class="<%= @hints.include?(a.content) ? "incorrect_answer" : "possible_answer" %> unselected_answer" onclick="<%= selection_script unless @hints.include?(a.content) %>">
+        <input <%= @hints.include?(a.content) ? "disabled='disabled'" : "" %> name="answer" type="radio" value="<%= a.id %>">
+        <span class="<%= @hints.include?(a.content) ? "already_guessed" : "" %>"><%= a.content %></span>
+      </label>
       </li>
+    <% end %>
   </ul>
   </div>
 </div>
