--- a/app/views/sections/_single_answer.html.erb
+++ b/app/views/sections/_single_answer.html.erb
@@ -1,6 +1,6 @@
 <div class="field clearfix">
   <label style="margin-top:0px;">Answer:</label>
   <div class="input">
-    <input id="answer1" name="answer" type="text" class="xlarge">
+    <input id="answer1" name="answer" type="text" class="xlarge" autofocus="autofocus">
   </div>
 </div>
