Removing unpublished paths from my paths on home page and adding Save & Enroll to edit roles.

--- a/app/views/paths/edit_roles.html.erb
+++ b/app/views/paths/edit_roles.html.erb
@@ -21,4 +21,5 @@
 <div class="actions">
   <%= link_to "Back", edit_path_path(@path), :class => "btn secondary" %>
   <%= submit_tag "Save", :class => "btn primary" %>
+  <%= submit_tag "Save & Enroll", :class => "btn primary" %>
 </div>
