--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -84,6 +84,7 @@
   <div class="actions">
     <input type="hidden" id="listless" name="listless" value="true">
     <%= submit_tag "Next", :class => "btn primary", :id => "submit_button" %>
+    <%= image_tag "/images/loading.GIF", :size => "23x23", :style => "vertical-align:middle; margin-left: 5px; display:none;", :class => "loading_image" %>
     <div class="btn secondary" id="help_button" style="margin-left: 15px;">Help</div>
   </div>
 </div>
