--- a/app/views/sections/_free_response.html.erb
+++ b/app/views/sections/_free_response.html.erb
@@ -1,5 +1,13 @@
 <div class="field clearfix">
   <% if task.answer_sub_type == 100 %>
+  <script>
+  $(function(){
+    $('#challenge_form').submit(function(){
+      $(".loading_image").show();
+      block_form_submit();
+    });
+  });
+  </script>
   <div class="input" style="margin-top:10px;">
     <textarea name="answer" id="answer_input" rows="3" style="width: 350px;" placeholder="Enter answer here..."></textarea>
     <p style="font-style:italic;">*Points awarded by votes</p>
