--- a/app/views/sections/_single_answer.html.erb
+++ b/app/views/sections/_single_answer.html.erb
@@ -2,7 +2,7 @@
 $(function(){
   $('#challenge_form').submit(function(){
     $(".loading_image").show();
-    block_form_submit();
+    $("#submit_button").attr("disabled","disabled");
   });
 });
 </script>
