--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -113,3 +113,6 @@ section.wiki { margin-bottom: 50px; }
 .info a          { color: #205791; } */
 .selected-time { text-decoration:underline; }
 #unresolved_tasks_list li:hover { background-color:whitesmoke; }
+.underlined { text-decoration:underline; }
+.btn.big { font-size: 18px; padding:8px; margin:10px;}
+.btn.really_big { font-size: 25px; padding:12px; margin:10px;}
