--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
             <li><%= link_to "Sign out", signout_path, :method => :delete, :id => "signout_link" %></li>
             <% end %>
           <% else %>
-          <li ><%= link_to "Sign in", signin_path %></li>
+          <li ><%= link_to "Sign in", signin_path, :class => "clickable_link" %></li>
           <% end %>
         </ul>
         <% if signed_in? && current_user.admin? %>
