--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -1,14 +1,59 @@
-<% if @immediate_registration || @partial_immediate_registration %>
-  <%= render "users/immediate_registration", { :path => @path } %>
-  <% if @immediate_registration %>
-  <script>
-    $(function(){
-      $('#username_modal').modal({ backdrop: 'static', show: true, keyboard: true });
+<% if @must_register && @completed %>
+<script>
+$(function(){
+  $('a').not(".clickable_link").attr("href", "#");
+  $('#save_score, a').not(".clickable_link").click(function(){
+    $('#jumpstart_registration_modal').modal({
+      keyboard: true,
+      backdrop: 'static',
+      show: true
     });
-  </script>
-  <% end %>
+  });
+});
+</script>
+<%= render "users/jumpstart_registration", { :user => current_user, :path => @path } %>
 <% end %>
-<section class="path">
+<script>
+function show_creative_list(){
+  console.log(this);
+  $('#creative_tasks_list').show();
+  $('#knowledge_tasks_list').hide();
+  $('.creative_link').addClass('underlined');
+  $('.creative_link').siblings('a').removeClass('underlined');
+}
+
+function show_knowledge_list(){
+  $('#knowledge_tasks_list').show();
+  $('#creative_tasks_list').hide();
+  $('.knowledge_link').addClass('underlined');
+  $('.knowledge_link').siblings('a').removeClass('underlined');
+}
+
+$(function(){
+  $(".vote_button").on("ajax:success",
+    function(event, data){
+      if(data.errors){
+        alert(data.errors);
+      } else {
+        console.log($(this).parents("li:first").children("div:last"));
+        var $vote_counter = $(this).parents("li:first").children("div.vote_count");
+        console.log($vote_counter);
+        var votes = parseInt($vote_counter.text());
+        console.log(votes);
+        if($(this).hasClass("primary")){
+          $(this).removeClass("primary").addClass("secondary").text("Vote");
+          $vote_counter.html("<span class='label notice' style='font-size: 16px;'>+"+(votes-1)+"</span>");
+        } else if($(this).hasClass("secondary")){
+          $(this).removeClass("secondary").addClass("primary").text("Voted");
+          $vote_counter.html("<span class='label notice' style='font-size: 16px;'>+"+(votes+1)+"</span>");
+        }
+      }
+    }
+  );
+});
+</script>
+<section>
+  <% unless @completed %>
   <div style="min-height: 120px;">
     <div style="float:left; margin: 0px 15px 0px 0px;">
       <%= image_tag(@path.path_pic, :size=>"100x100") %>
@@ -17,15 +62,10 @@
     <% unless @enrolled %>
       <%= form_for current_user.enrollments.build(:path_id => @path.id) do |f| %>
         <%= f.hidden_field :path_id %>
-        <%= f.submit "Start "+name_for_paths, :class=> "btn primary xlarge", :style => "margin: 10px 40px 0px 0px; float:right;" %>
+        <%= f.submit "Start "+name_for_paths, :class=> "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;" %>
       <% end %>
-    <% else %>
-      <% if @partial_immediate_registration || @immediate_registration %>  
-        <a onclick="$('#username_modal').modal({ backdrop: 'static', show: true, keyboard: true });
-;" class="btn primary xlarge" style="margin: 10px 40px 0px 0px; float:right;">Start <%= name_for_paths %></a>
-      <% else %>
-        <%= link_to @start_mode, continue_path_path(@path), :class => "btn primary xlarge", :style => "margin: 10px 40px 0px 0px; float:right;"%>
-      <% end %>
+    <% else %>  
+      <%= link_to @start_mode, continue_path_path(@path), :class => "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;"%>
     <% end %>
     </div>
     <div>
@@ -35,57 +75,90 @@
       <div class="description"><%= @path.description.html_safe %></div>
     </div>
   </div>
-  
-  
-  <% if @path.enable_section_display %>
-    <%= render "path_sections", { :sections => @sections } %>
-  <% end %>
-  
-  
-  <% if @enable_leaderboard %>
-  <section class="tab_header">
-    <div>
-      <h3>Leaderboards</h4>
-    </div>
-    <div>
-      <script>
-      $(function (){
-        $("#leaderboard_overall").show().addClass("active_board");
-      });
-      
-      function change_leaderboard(new_board_id){
-        var old_board_id = $(".active_board").attr("id").replace("leaderboard_","");
-        $(".active_board").hide().removeClass("active_board");
-        $("#leaderboard_"+new_board_id).show().addClass("active_board");
-        $("#leaderboard_header_"+old_board_id).removeClass("active");
-        $("#leaderboard_header_"+new_board_id).addClass("active");
-      }
-      </script>
-      <ul class="tabs">
-        <li class="active" id="leaderboard_header_overall"><a onclick="change_leaderboard('overall')">Overall</a></li>
-        <% @sections.each do |s| %>
-        <li id="leaderboard_header_<%= s.id.to_s %>"><a onclick="change_leaderboard('<%= s.id.to_s %>')"><%= s.name %></a></li>
-        <% end %>
+  <% else %>
+  <div class="row">
+    <div class="span3" style="width: 130xp;">
+      <ul class="media-grid">
+        <li>
+          <a>
+            <%= image_tag @path.path_pic, :style => "min-height: 100px; max-height: 105px; max-width: 130px;" %>
+          </a>
+        </li>
       </ul>
     </div>
-    <% @leaderboards.each do |l| %>
-      <%= render "leaderboards/leaderboard", {:leaderboard_id => l[0], :leaderboard_entries => l[1] } %>
-    <% end %>
-    <% unless @leaderboards.empty? %>
-      <p>Last leaderboard update: <%= time_ago_in_words(@last_update) %> ago</p>
-    <% end %>
-  </section>
-  <% end %>
-  
-  
-  <% if @enable_comments %>
-    <%= render "facebook_like" %>
-  <% end %>
-  
-  
-  <% if can_edit_path(@path) %>
-  <div class="actions">
-    <%= link_to "Edit", edit_path_path(@path), :class => "btn primary", :style => " margin: 10px 40px 0px 0px;" %>
+    <div class="span13" style="margin: 0 0 0 0px; ">
+      <h1 style="margin-bottom:2px; text-decoration: underline;">Congratulations!</h1>
+      <p style="font-size:13px; font-style: italic; font-weight:bold; margin-bottom: 10px;">You have successfully completed this <%= name_for_paths.downcase %></p>
+      <div>
+        <p style="line-height:20px; font-size:17px;">
+          You're now ranked <strong><%= @user_rank %></strong> with <strong><%= pluralize(@total_points_earned.to_i, "point") %></strong>. You reached a skill ranking of <strong><%= @skill_ranking.to_s %></strong>.
+          <% if @next_rank_points.to_i > 0 %>You only need <%= pluralize(@next_rank_points.to_i, "point") %></strong> to move up to the next rank!<% end %>
+        </p>
+      </div>
+    </div>
   </div>
   <% end %>
+  <hr style="margin:10px;"/>
+  <section>
+    <div class="row">
+      <div class="span3">
+        <%= render "side_leaderboard" %>
+      </div>
+      <div class="span10" style="border-left:1px solid #DDD; border-right:1px solid #DDD; padding:0px 20px;">
+      <% if @must_register && @complete %>
+        <div style="height: 900px;">
+          <p style="font-size: 18px; line-height:25px;"><%= link_to "Save your score", signin_path %> so that people can vote for your submissions, and so that you can vote on theirs!</p>
+          <p style="font-size: 18px; line-height:25px;">Once you save your score, you can also take the next level of this challenge to improve your global ranking, create your own challenges and start a <%= link_to "Persona", "#" %>.</p>
+        </div>
+      <% elsif @must_register %>
+        <div style="height: 900px;">
+          <p style="font-size: 18px; line-height:25px;">Complete the first level of this challenge so you can see where you rank on the global leaderboard and vote on other people's answers!</p>
+          <% unless @enrolled %>
+            <%= form_for current_user.enrollments.build(:path_id => @path.id) do |f| %>
+              <%= f.hidden_field :path_id %>
+              <%= f.submit "Start "+name_for_paths, :class=> "btn primary really_big clickable_link", :style => "margin: 20px 180px;" %>
+            <% end %>
+          <% else %>  
+            <%= link_to @start_mode, continue_path_path(@path), :class => "btn primary really_big clickable_link", :style => "margin: 20px 160px;"%>
+          <% end %>
+        </div>
+      <% else %>
+        <% if @show_voting %>
+          <% unless @in_drill_down %>
+          <div class="row" style="margin-bottom:15px;">
+            <div style="float:left; padding:0 10px; cursor:pointer;">
+              <a onclick="show_creative_list();" class="underlined creative_link">Creative</a> | 
+              <a onclick="show_knowledge_list();" class="knowledge_link" >Knowledge</a>
+            </div>
+            <div style="float:right; padding:0 10px;">
+              <%= link_to "Newest", 
+                finish_path_path(@path, :order => "recent"), 
+                :class => (@order.include?("votes") ? "" : "underlined") %> | 
+              <%= link_to "Most Votes", 
+                finish_path_path(@path, :order => "votes"), 
+                :class => (@order.include?("votes") ? "underlined" : "") %>
+            </div>
+          </div>
+          <%= render "voting_explanation" %>
+          <% else %>
+          <div class="row" style="margin-bottom:15px;">
+            <div style="float:left; padding:0 10px;">
+              <%= link_to "<<< Back", finish_path_path(@path, :order => "recent") %>
+            </div>
+          </div>
+          <% end %>
+          <%= render "creative_tasks_list" %>
+        <% end %>
+        <%= render "knowledge_tasks_list" %>
+      <% end %>
+      </div>
+      <div class="span2">
+        <ul class="media-grid">
+          <% @similar_paths.each do |similar_path| %>
+            <li><%= link_to image_tag(similar_path.path_pic, :size => "100x90", :title => similar_path.name), similar_path, :class => (similar_path.is_locked ? "locked_challenge" : "") %>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </section>
 </section>
